# incentives

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  run.sh
backup/2024-12-04/: Incentives-2.xlsx
backup/2025-01-10/: Incentives-3.xlsx
backup/24-11-26/: Incentives.xlsx
incentives/: __init__.py  static.py
literature_search/: LoS_incentives_revision_micro.xlsx  search.py  ~$LoS_incentives_revision_micro.xlsx
literature_search/artifacts/20240828/: metadata.txt  search_20240828-191134.csv
literature_search/artifacts/20240829/: metadata_20240829-153411.txt  metadata_20240829.txt  search_20240829.csv
literature_search/artifacts/20240829_a/: search_20240829-153411.csv
literature_search/artifacts/20240830/: search_20240830.csv
literature_search/resources/: 20_AUG_IDEAS:RePEc.html  guidelines_for_snowballing.txt
literature_search/src/: __init__.py  config.py  file_handling.py  paths.py  scholar.py  static.py
thoughts/: 2024-08-29.txt
