[tool.poetry]
name = "incentives"
version = "0.1.0"
description = "A revision of the Financial Incentives paper"
authors = ["PetrCala <cala.p@seznam.cz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
scholarly = "^1.7.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
