[tool.poetry]
name = "incentives"
version = "0.1.0"
description = "A revision of the Financial Incentives paper"
authors = ["PetrCala <cala.p@seznam.cz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
scholar_wizard = { path = "./scholar-wizard", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
